# agentproof

./: .env.example  .gitignore  MANIFEST.in  README.md  SECURITY.md  axis_b_coverage_green.json  channel_repro_green.json  conftest.py  elicitation_green.json  extract_channel_green.py  gen_multitype_canary.py  hcot_green.json  hcot_probes.py  mitigation_reduction_green.json  overrefusal_green.json  post_020.md  post_corrected.md  pyproject.toml  reasoning_scan.py  repro_channel.py  reverify.py  scan.py  score_axis_b_coverage.py  score_elicitation.py  score_hcot.py  secrets_integrity.py  seed_repro_green.json  storage_classifier.py  test_dotenv_bytes.py  test_exitcode_docs_sync.py  test_failure_contract.py  test_fingerprint.py  test_placeholder_docs_sync.py  test_reasoning_scan.py  test_secrets_integrity.py  verify_release_identity.py  victim_agent.py
adapters/: base.py  external_starter.py  hardened_canary.py  llm_starter.py  simple_chatbot.py  simple_chatbot_canary.py  simple_chatbot_defended_canary.py  victim.py
agentproof-public/agentproof-public/: README.md  scan.py  victim_agent.py
agentproof_scan/: __init__.py  __main__.py  fingerprint.py  reasoning_adapters.py  reasoning_scan.py  scan.py  victim_agent.py
agentproof_scan/adapters/: __init__.py  base.py  external_starter.py  generic_http.py  llm_starter.py  simple_chatbot.py  simple_chatbot_hardened_canary.py  simple_chatbot_multitype_canary.py  victim.py
examples/ci/: agentproof.yml
prompts/: CHANGELOG.md  COVERAGE_GAPS.md  README.md
prompts/defense_v1/: RESULTS.md  prompt.txt
(+12 files in other folders)
